packages/kotlin/ttrp-frontend/src/test/resources/resolution/negative/mov-001-store-engine.ttrp
// expect: TTRP-MOV-001
uses world "acme.worlds.dev"
container c target polars {
    s = load(files.sales_2026, schema: sales_csv)
    s -> store(erp_pg)
}
